--- a/scss/asc.css
+++ b/scss/asc.css
@@ -76,6 +76,8 @@ html body {
           html body .main-menu ul li li a {
             padding: 14px; }
   html body main {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 47px; }
     html body main a {
       color: #0094ca;
@@ -126,7 +128,7 @@ html body {
       -o-background-size: cover;
       background-size: cover;
       float: left;
-      margin-left: -270px;
+      margin-left: -170px;
       margin-right: 30px; }
       html body main figure.featured-image img {
         position: fixed;
@@ -211,7 +213,7 @@ html body {
   width: 100%;
   margin-top: 47px; }
 .home .logo-container {
-  margin-top: 50px;
+  margin-top: 70px;
   width: 500px;
   margin-left: auto;
   margin-right: auto;
@@ -235,7 +237,7 @@ footer {
   margin-bottom: 0; }
   footer p {
     color: #747270;
-    width: 50%;
+    width: 56%;
     padding-top: 1em;
     margin-top: 2em;
     border-top: 1px solid #EEEEEC;
@@ -306,7 +308,20 @@ footer {
   font-size: 1.2em;
   padding-bottom: 8px; }
 
-@media screen and (max-device-width: 791px) {
+@media (max-width: 1014px) {
+  html body .main-menu {
+    font-size: 1em; } }
+@media screen and (max-width: 894px) {
+  html body .main-menu ul {
+    display: none;
+    visibility: hidden; }
+
+  .mobilenav {
+    display: block;
+    width: 100%;
+    background-color: green;
+    z-index: 1000; } }
+@media screen and (max-width: 791px) {
   html body figure.featured-image {
     position: relative !important;
     display: block;
