--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -129,7 +129,7 @@ html body {
 								opacity:1;
 							}
 							& li {
-								margin-left:2px;
+								margin-left:1px;
 								display:block;
 									a {
 										padding:14px;
@@ -144,6 +144,7 @@ html body {
 		margin-left:auto;
 		margin-right:auto;
 		margin-top:47px;
+		margin-bottom:3em;
 		a {
 				color:$brand;
 				text-decoration: underline;
@@ -440,10 +441,39 @@ footer.main-foot {
 	}
 }
 @media screen and (max-width : 989px) {
+	html body.home {
+		#binder.fluid main {
+			margin-top:3em;
+		}
+	}
 	html body {
 		#binder.fluid main {
 			margin-left:0;
 			margin-right:0;
+			margin-top:24em;
+		}
+		figure.featured-image {
+				position:absolute !important;
+				top:0;
+				height:300px !important;
+				display: block;
+				width:100% !important;
+				min-height: 100px !important;
+				float:none;
+				margin-left:0px !important;
+			}
+			.page, .wsuwp_uc_project {
+				float:none;
+				width:100% !important;
+				margin:0 !important;
+			}
+			.post,.wsuwp_uc_project, .wsuwp_uc_publication, .wsuwp_uc_person, .wsuwp_uc_entity, #tribe-events-pg-template {
+				margin-left:0 !important;
+			}
+		footer.main-foot {
+			width:100%;
+			float:left;
+			text-align:center;
 		}
 		nav.main-menu {
 			position: fixed;
@@ -516,7 +546,7 @@ footer.main-foot {
 			margin-top: 0;
 			padding: 0;
 			cursor: pointer;
-			background: url("/wp-content/themes/ascent/images/menu.png") no-repeat;
+			background: url("../images/menu.png") no-repeat;
 			background-position: 90% center;
 			background-color:$brand;
 			&:hover {
@@ -532,24 +562,6 @@ footer.main-foot {
 			}
 		}	
 	}
-	html body {
-		figure.featured-image {
-				position:relative !important;
-				display: block;
-				width:100% !important;
-				min-height: 100px !important;
-				float:none;
-				margin-left:0px !important;
-			}
-			.page, .wsuwp_uc_project {
-				float:none;
-				width:100% !important;
-				margin:0 !important;
-			}
-			.post,.wsuwp_uc_project, .wsuwp_uc_publication, .wsuwp_uc_person, .wsuwp_uc_entity, #tribe-events-pg-template {
-				margin-left:0 !important;
-			}
-		}
 		.post-type-archive, .single-wsuwp_uc_person, .single-wsuwp_uc_project {
 	main {
 		h1 {
@@ -574,7 +586,66 @@ footer.main-foot {
 }
 }
 @media screen and (max-width : 791px) {
-	
+	html body {
+		#binder.fluid main {
+			margin-left:0;
+			margin-right:0;
+			margin-top:20em;
+		}
+		figure.featured-image {
+				position:absolute !important;
+				top:0;
+				height:300px !important;
+				display: block;
+				width:100% !important;
+				min-height: 100px !important;
+				float:none;
+				margin-left:0px !important;
+			}
+		 main {
+			header.main-header {
+				position:relative;
+				& h1 {
+					& .ascent-main-header {
+						font-weight:300;
+						font-size:75%;
+					}
+				}
+			}
+		}	
+			nav.main-menu {
+				ul {
+					li {
+						a {
+							padding-top:18px;
+							padding-bottom:18px;
+							font-size:110%;
+						}
+					}
+				}
+			}
+
+	}
+}
+@media screen and (max-width : 491px) {
+	html body {
+		main {
+			h1 {
+				font-size:2em;
+			}
+		}
+		footer.main-foot {
+			border-top:none;
+			 ul {
+		 		li {
+			 			border-right:none;
+			 			border-top:1px solid $lightest-gray;
+			 			padding-top:1em;
+			 			padding-bottom:1em;
+		 		}
+		 	}
+		}
+	}
 }
 @media screen and (min-width : 2100px) {
 	html body {
