--- a/scss/asc.css
+++ b/scss/asc.css
@@ -542,7 +542,7 @@ html {
         display: inline-block !important;
         float: left;
         width: 150px;
-        height: 60px;
+        margin-bottom: 15px;
         text-align: center; }
       html body.archive .wsuwp_uc_entity p {
         height: 60px;
