--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -386,7 +386,7 @@ html {
 						display:inline-block !important;
 						float:left;
 						width:150px;
-						height:60px;
+						margin-bottom:15px;
 						text-align: center;
 					}
 					p { 
