Missed page target
Missed page target for entity single to remove the heading ‘Entities’

--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -348,7 +348,7 @@ html {
 			float:left;
 		}
 	}
-	body.single-wsuwp_uc_person {
+	body.single-wsuwp_uc_person, body.single-wsuwp_uc {
 		.wsuwp-uc-entities {
 			h3 {
 				display:none;
