--- a/scss/asc.css
+++ b/scss/asc.css
@@ -276,7 +276,7 @@ html {
   html body.home div.page {
     width: 100%;
     float: left; }
-  html body.single-wsuwp_uc_person .wsuwp-uc-entities h3 {
+  html body.single-wsuwp_uc_person .wsuwp-uc-entities h3, html body.single-wsuwp_uc .wsuwp-uc-entities h3 {
     display: none; }
   html body.single-wsuwp_uc_entity #binder.fluid .row:not(.column):not(.rebound) {
     margin-top: 76px; }
