--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -354,6 +354,11 @@ html {
 				display:none;
 			}
 		}
+		.pager {
+			width:64%;
+			float:right;
+			text-align: center;
+		}
 	}
 	body.single-wsuwp_uc_entity {
 		#binder.fluid .row:not(.column):not(.rebound) {
