--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -385,9 +385,8 @@ html {
 					.article-thumbnail {
 						display:inline-block !important;
 						float:left;
-						width:180px;
-						margin-bottom:18px;
-						margin-top:18px;
+						width:150px;
+						margin:18px;
 						text-align: center;
 							img {
 								width:100%;
@@ -396,7 +395,6 @@ html {
 					p { 
 						height:60px;
 						vertical-align: middle;
-						margin-left:12px;
 						padding-top:15px;
 						display:inline-block;
 					}
