--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -396,6 +396,7 @@ html {
 						float:none;
 						vertical-align: middle;
 						display:inline-block;
+						max-width:50%;
 					}
 					.article-summary {
 						display: none;
