--- a/scss/asc.css
+++ b/scss/asc.css
@@ -16,6 +16,8 @@ html {
     color: #343232;
     background-color: #fff;
     /* Menu */ }
+    html body #binder:not(.fluid).max-1188 .row {
+      max-width: 1188px; }
     html body #spine, html body #mobilelogo {
       display: none; }
     html body .main-menu {
@@ -167,13 +169,16 @@ html {
           html body main header.main-header h1 .ascent-main-header {
             font-weight: 300;
             font-size: 75%; }
-      html body main .type-page, html body main .wsuwp_uc_project, html body main .wsuwp_uc_entity {
+      html body main .type-page, html body main .wsuwp_uc_project, html body main .wsuwp_uc_entity, html body main .single-people-section {
         width: 50%;
         margin-right: 150px;
         margin-top: 65px;
         float: right; }
       html body main .wsuwp_uc_project {
         margin-right: 120px; }
+      html body main .single-people-section {
+        margin-right: 0;
+        width: 80%; }
       html body main .post .tribe-events-calendar .datepicker.dropdown-menu, html body main .wsuwp_uc_project .tribe-events-calendar .datepicker.dropdown-menu, html body main .wsuwp_uc_publication .tribe-events-calendar .datepicker.dropdown-menu, html body main .wsuwp_uc_person .tribe-events-calendar .datepicker.dropdown-menu, html body main .wsuwp_uc_entity .tribe-events-calendar .datepicker.dropdown-menu, html body main #tribe-events-pg-template .tribe-events-calendar .datepicker.dropdown-menu {
         color: #343232;
         font-family: "Roboto", sans-serif !important; }
@@ -266,7 +271,7 @@ html {
     width: 100%;
     margin-top: 47px; }
     html body.home .videobg .logo-container {
-      margin-top: 70px;
+      margin-top: 60px;
       width: 500px;
       margin-left: auto;
       margin-right: auto;
@@ -287,6 +292,8 @@ html {
     height: 300px;
     margin-left: 130px;
     margin-top: 120px; }
+  html body.single-wsuwp_uc_person #binder.fluid .row:not(.column):not(.rebound).pager {
+    width: 100% !important; }
   html body.archive main .row .column {
     float: right;
     width: 100%;
